Made changes to README.md

--- a/trials/mouse final.ipynb
+++ b/trials/mouse final.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +125,9 @@
     "            cY  = int((c1Y+c2Y)/2)\n",
     "            mouseLoc = (sx -(sx *(cX/imw)),sy*(cY/imh))\n",
     "            mouse.position = mouseLoc\n",
+    "    cv2.imshow(\"redmask\",red_mask)\n",
+    "    cv2.imshow(\"bluemask\",blue_mask)\n",
+    "    cv2.imshow(\"mixmask\",mix)\n",
     "    cv2.imshow(\"img\",img)\n",
     "    cv2.imshow(\"mix\",mix_blur)\n",
     "    cv2.imshow(\"red\",red_blur)\n",
